fixed the bug in Safari
when I apply the relative position to the .profile, the header and the .profile are overlapping. Position absolute or fixed seem to work better.

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,8 @@ button:focus {
 .profile {
   max-width: 700px;
   min-width: 280px;
-  position: relative;
+  width: 100%;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
