--- a/css/style.production.css
+++ b/css/style.production.css
@@ -173,7 +173,8 @@ button:focus {
 .profile {
   max-width: 700px;
   min-width: 280px;
-  position: relative;
+  width: 100%;
+  position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
